[package]
name = "forte"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A low-overhead thread-pool with support for non-static async closures"
repository = "https://github.com/NthTensor/Forte"

[dependencies]
parking_lot = "0.12.3"
async-task = "4.7.1"
crossbeam-utils = "0.8.21"
crossbeam-queue = "0.3.12"

[dev-dependencies]
winit = "0.30.7"
criterion = "0.5"

[[bench]]
name = "bevy"
harness = false
